--- a/public/css/admin/masterpage.css
+++ b/public/css/admin/masterpage.css
@@ -662,8 +662,17 @@ input[type='text']:focus, input[type='password']:focus{
     color: #fff;
 }
 
+.orange{
+	background: #FCB322;
+}
+
 .green{
 	background: #048b11;
+	color: #fff;
+}
+
+a.green{
+	color: #fff;
 }
 
 .stepList{
@@ -858,7 +867,7 @@ input[type='text']:focus, input[type='password']:focus{
 
 .table_info{
 	color: #008fc7;
-	padding: 4px;
+	padding: 8px;
 	background: #f3f3f3;
 	border-bottom: 1px dotted #eee;
 	display: block;
