--- a/public/css/admin/nested.css
+++ b/public/css/admin/nested.css
@@ -3,7 +3,7 @@
  http://dbushell.github.io/Nestable/
  */
 
-.dd { position: relative; display: block; margin: 0; padding: 0; max-width: 600px; list-style: none; font-size: 13px; line-height: 20px; }
+.dd { position: relative; display: block; margin: 0; padding: 0; /*max-width: 600px;*/ list-style: none; font-size: 13px; line-height: 20px; }
 
 .dd-list { display: block; position: relative; margin: 0; padding: 0; list-style: none; }
 .dd-list .dd-list { padding-left: 30px; }
@@ -11,18 +11,37 @@
 
 .dd-item,
 .dd-empty,
-.dd-placeholder { display: block; position: relative; margin: 0; padding: 0; min-height: 20px; font-size: 13px; line-height: 20px; }
+.dd-placeholder { 
+    display: block; 
+    position: relative; 
+    margin: 0; 
+    padding: 0; 
+    min-height: 20px; 
+    font-size: 13px; 
+    line-height: 20px; 
+    overflow: auto;
+    color: #000
+}
 
-.dd-handle { display: block; height: 30px; margin: 5px 0; padding: 5px 10px; color: #333; text-decoration: none; font-weight: bold; border: 1px solid #ccc;
-    background: #fafafa;
-    background: -webkit-linear-gradient(top, #fafafa 0%, #eee 100%);
+.dd-handle {
+    width: 21px;
+    height: 31px;
+    background: url('../../image/admin/order.png') no-repeat;
+    position: relative;
+    top:-5px;
+    color: #fff;
+    font-weight: bold;
+    text-align: center;
+    /*display: block; height: 30px; margin: 5px 0; padding: 5px 10px; color: #333; text-decoration: none; /*font-weight: bold; border: 1px solid #ccc;
+     background: #fafafa;*/
+    /*background: -webkit-linear-gradient(top, #fafafa 0%, #eee 100%);
     background:    -moz-linear-gradient(top, #fafafa 0%, #eee 100%);
     background:         linear-gradient(top, #fafafa 0%, #eee 100%);
     -webkit-border-radius: 3px;
             border-radius: 3px;
-    box-sizing: border-box; -moz-box-sizing: border-box;
+    box-sizing: border-box; -moz-box-sizing: border-box;*/
 }
-.dd-handle:hover { color: #2ea8e5; background: #fff; }
+.dd-handle:hover { color: #000; /*background: #fff;*/ cursor: pointer; }
 
 .dd-item > button { display: block; position: relative; cursor: pointer; float: left; width: 25px; height: 20px; margin: 5px 0; padding: 0; text-indent: 100%; white-space: nowrap; overflow: hidden; border: 0; background: transparent; font-size: 12px; line-height: 1; text-align: center; font-weight: bold; }
 .dd-item > button:before { content: '+'; display: block; position: absolute; width: 100%; text-align: center; text-indent: 0; }
@@ -31,12 +50,12 @@
 .dd-placeholder,
 .dd-empty { margin: 5px 0; padding: 0; min-height: 30px; background: #f2fbff; border: 1px dashed #b6bcbf; box-sizing: border-box; -moz-box-sizing: border-box; }
 .dd-empty { border: 1px dashed #bbb; min-height: 100px; background-color: #e5e5e5;
-    background-image: -webkit-linear-gradient(45deg, #fff 25%, transparent 25%, transparent 75%, #fff 75%, #fff), 
+    /*background-image: -webkit-linear-gradient(45deg, #fff 25%, transparent 25%, transparent 75%, #fff 75%, #fff), 
                       -webkit-linear-gradient(45deg, #fff 25%, transparent 25%, transparent 75%, #fff 75%, #fff);
     background-image:    -moz-linear-gradient(45deg, #fff 25%, transparent 25%, transparent 75%, #fff 75%, #fff), 
                          -moz-linear-gradient(45deg, #fff 25%, transparent 25%, transparent 75%, #fff 75%, #fff);
     background-image:         linear-gradient(45deg, #fff 25%, transparent 25%, transparent 75%, #fff 75%, #fff), 
-                              linear-gradient(45deg, #fff 25%, transparent 25%, transparent 75%, #fff 75%, #fff);
+                              linear-gradient(45deg, #fff 25%, transparent 25%, transparent 75%, #fff 75%, #fff);*/ 
     background-size: 60px 60px;
     background-position: 0 0, 30px 30px;
 }
@@ -63,16 +82,16 @@
     color: #fff;
     border: 1px solid #999;
     background: #bbb;
-    background: -webkit-linear-gradient(top, #bbb 0%, #999 100%);
+    /*background: -webkit-linear-gradient(top, #bbb 0%, #999 100%);
     background:    -moz-linear-gradient(top, #bbb 0%, #999 100%);
-    background:         linear-gradient(top, #bbb 0%, #999 100%);
+    background:         linear-gradient(top, #bbb 0%, #999 100%);*/
 }
 #nestable2 .dd-handle:hover { background: #bbb; }
 #nestable2 .dd-item > button:before { color: #fff; }
 
 @media only screen and (min-width: 700px) { 
 
-    .dd { float: left; width: 48%; }
+    .dd { float: left; width: 100%; }
     .dd + .dd { margin-left: 2%; }
 
 }
