--- a/public/css/admin/masterpage.css
+++ b/public/css/admin/masterpage.css
@@ -160,7 +160,7 @@ a.link:hover{color:#666; text-decoration: underline;}
 	width: 100%;
 	top:0;
 	left:0;
-	z-index: 999;
+	z-index: 10001;
 }
 
 #menu{
@@ -485,18 +485,26 @@ label
 	background: #fed22f;
 	background-image: none;
 }
-
-.ui-state-highlight{
-	background: #f2fbff !important; 
-	border: 1px dashed #b6bcbf !important;
-	height:70px;
-}
-
 .ui-datepicker-header{ padding: 5px; height: 20px;}
 .ui-datepicker-prev{ float:left; margin-right: 10px; cursor: pointer;}
 .ui-datepicker-next{ float:right; cursor: pointer;}
 .ui-datepicker-title{ float: left;}
 .ui-datepicker .ui-datepicker-today{ background-color: #009f9f;}
+
+#sortable .ui-state-highlight{
+	margin: 5px 0; 
+	padding: 0; 
+	min-height: 70px; 
+	background: #f2fbff; 
+	border: 1px dashed #b6bcbf;
+}
+
+
+.filters{
+	height: 30px;
+	padding-top: 5px;
+	position: relative;
+}
 
 #filelist div{ 
 	border:1px outset #eee; 
@@ -752,7 +760,7 @@ a.green{
 	padding: 5px;
 }
 
-.list_item li{
+.list_item li, .dd-item{
 	margin: 5px 0;
 	padding: 5px;
 	background: #fff; 
@@ -774,7 +782,7 @@ a.green{
 	float: left;
 }
 
-.list_item li:nth-child(odd){ 
+.list_item li:nth-child(odd), .dd-list li{ 
 	background: #f3f3f3; 
 }
 
@@ -792,11 +800,6 @@ a.green{
     font-weight: bold;
     text-align: center;
 }
-
-.ui-sortable-helper{
-	background: red;
-}
-
 
 .ui-tabs, .ui-widget, .ui-widget-content, .ui-corner-all {
 	border: none;
@@ -820,25 +823,23 @@ a.green{
 }
 
 
+
 .filter{
 	color:#008fc7;
 	display: block;
 	cursor: pointer;
 }
 
-.filter span{
-	display: block;
-}
-
 .filter ul li{
-	width: 80px;
 	float:left;
 	position: relative;
 	padding: 5px;
+	margin-left: 5px;
 }
 
 .filter ul li:hover{
-	background: #ccc;
+	background: #f3f3f3;
+
 }
 
 /*
@@ -855,13 +856,25 @@ a.green{
 	background: #ccc;
 	display: none;
 	left: 0;
+	margin-top: 2px;
 	padding: 5px;
+	width: 150px;
 }
 
-.filter ul li > ul li{
-	width: 150px;
+.filter ul li > ul li{	
 	display: block;
 	float: none;
+	margin: 0;
+
+	-o-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -khtml-border-radius: 4px;
+    border-radius: 4px;
+}
+
+.filter ul li > ul li label{	
+	cursor: pointer;
 }
 
 .status{
@@ -968,12 +981,19 @@ a.green{
 	padding: 8px;
 }
 
+
 .ui-widget-content{
 	background: none;
 	border: none;
 	padding: 0;
 	margin: 0;
 }
+
+
+.ui-dialog .ui-dialog-content {
+	background: #fff;
+}
+
 
 .ui-widget-header .ui-state-default.ui-state-active{
 	background: #fff;
