--- a/public/css/admin/masterpage.css
+++ b/public/css/admin/masterpage.css
@@ -428,6 +428,7 @@ label
 
 .task{
 	border: 1px solid #CCC;
+	margin: 5px 0;
 }
 
 
@@ -438,7 +439,7 @@ label
 
 .hist_reply{
     padding:10px;
-    margin:-5px 5px 5px 5px;
+    margin-top: -5px;
     min-width: 600px;
     max-width: 600px;
     color: #585858;
