--- a/public/css/admin/masterpage.css
+++ b/public/css/admin/masterpage.css
@@ -449,6 +449,10 @@ label
 .task{
 	border: 1px solid #CCC;
 	margin: 10px 0 5px 0;
+
+	-moz-box-shadow: 2px 2px 8px #ccc;
+	-webkit-box-shadow: 2px 2px 8px #ccc;
+	box-shadow: 2px 2px 8px #ccc;
 }
 
 .anotacoes{
@@ -470,7 +474,10 @@ label
     color: #585858;
     /*border-bottom: 1px dotted #ccc;*/
     background: #f3f3f3;
-    /*box-shadow:#999 2px 2px 2px;*/
+
+    -moz-box-shadow: 2px 2px 5px #ccc;
+	-webkit-box-shadow: 2px 0 5px #ccc;
+	box-shadow: 2px 2px 5px #ccc;
 }
 
 
@@ -1016,8 +1023,23 @@ a.green{
 
 .ui-dialog .ui-dialog-content {
 	background: #fff;
+
+
 }
 
+.ui-dialog .ui-dialog-content, .ui-dialog-buttonpane{
+	background: #fff;
+}
+
+.ui-dialog-content{
+	border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+}
+
+.ui-dialog-buttonpane{
+	margin: 0 !important;
+	padding: 5px !important;	
+}
 
 .ui-widget-header .ui-state-default.ui-state-active{
 	background: #fff;
